# lliurex-up-plasmoid

./: CMakeLists.txt  README.md
applets/: CMakeLists.txt
applets/lliurexupnotifier/: CMakeLists.txt
applets/lliurexupnotifier/knotifications5/: llxupnotifier.notifyrc
applets/lliurexupnotifier/knotifications6/: llxupnotifier.notifyrc
applets/lliurexupnotifier/package/: metadata.desktop  metadata.json  metadata_full.desktop
applets/lliurexupnotifier/package/contents/ui/: main.qml  main_full.qml
applets/lliurexupnotifier/plugin/: LliurexUpIndicator.cpp  LliurexUpIndicator.h  LliurexUpIndicatorUtils.cpp  LliurexUpIndicatorUtils.h  plugin.cpp  plugin.h  qmldir
debian/: changelog  control  copyright  lliurex-up-indicator-plasmoid.dirs  lliurex-up-indicator-plasmoid.install  lliurex-up-indicator-plasmoid.postinst  lliurex-up-indicator.dirs  lliurex-up-indicator.postinst  plasma-widget-lliurex-up-notifier.prerm  rules
po/: plasma_applet_org.kde.plasma.lliurexupnotifier.pot  update_translations.sh
po/ca/: plasma_applet_org.kde.plasma.lliurexupnotifier.po
po/ca@valencia/: plasma_applet_org.kde.plasma.lliurexupnotifier.po
po/en_GB/: plasma_applet_org.kde.plasma.lliurexupnotifier.po
po/es/: plasma_applet_org.kde.plasma.lliurexupnotifier.po
